# TimeReporter

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  timerecordconrol.cpp  timerecordconrol.h
src/reporter/: CMakeLists.txt
src/store/: CMakeLists.txt  Store.cpp  Store.h
